--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ language: python
 python:
   - 2.7
 install:  # install dependencies
-  - pip install -r requirements.txt
-  - python setup.py develop
+  - pip install pyprf
 script:  # command to run tests
   - py.test --cov=pyprf
 after_success:
