--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 sudo: false
 os:
   - linux
-  - osx
+  # - osx
 language: python
 python:
   - 2.7
 install:  # install dependencies
   - pip install -r requirements.txt
-script:  # command to run tests
+script:  # actual test
   - py.test --cov=pyprf
 after_success:
   - bash <(curl -s https://codecov.io/bash)
