--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ python:
   - 2.7
 install:  # install dependencies
   - pip install -r requirements.txt
-  - pwd
-  - pip install -e ./pyprf
+  - pip install -e .
 script:  # actual test
   - py.test --cov=pyprf
 after_success:
