--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ python:
   - 2.7
 install:  # install dependencies
   - pip install -r requirements.txt
-  - python setup.py build_ext
-  - python setup.py install
+  - pip install .
 script:  # actual test
   - py.test --cov=pyprf
 after_success:
