--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ numpy>=1.14.0
 scipy>=1.0.0
 nibabel>=2.2.1
 pytest-cov>=2.5.1
-pillow>=5.0.0
-cython>=0.27.1
-tensorflow>=1.4.0
+pillow==5.0.0
+cython==0.27.1
+tensorflow==1.4.0
