--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy>=1.14.0
-scipy>=1.0.0
-nibabel>=2.2.1
-pytest-cov>=2.5.1
+numpy==1.15.1
+scipy==1.1.0
+nibabel==2.2.1
+pytest-cov==2.6.0
 pillow==5.0.0
 cython==0.27.1
 tensorflow==1.4.0
