--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - 3.6
 install:  # install dependencies
   - pip install -r requirements.txt
-  - pip install -e .
+  - pip install .
 script:  # actual test
   - py.test --cov=pyprf
 after_success:
